rustc: add --read-attr <name>

--- a/man/rustc.1
+++ b/man/rustc.1
@@ -50,6 +50,10 @@ Pretty-print the input. Valid \fItype\fRs are:
 \fB--ls\fR:
 Lists symbols defined by the specified \fBcompiled\fR library.
 .TP
+\fB--read-attr\fR \fIname\fR:
+Print the named attribute of the specified \fBcompiled\fR library, or nothing
+if no such attribute exists.
+.TP
 \fB-L\fR \fIpath\fR:
 Adds \fIpath\fR to the library search path.
 .TP
