--- a/doc/rust.texi
+++ b/doc/rust.texi
@@ -1095,9 +1095,11 @@ An example of a crate:
 use std (ver = "1.0");
 
 // Define some modules.
-mod foo = "foo.rs";
+#[path = "foo.rs"]
+mod foo;
 mod bar @{
-    mod quux = "quux.rs";
+    #[path =  "quux.rs"]
+    mod quux;
 @}
 @end example
 
