--- a/man/rustc.1
+++ b/man/rustc.1
@@ -126,6 +126,9 @@ Build a test harness.
 .TP
 \fB--warn-unused-imports\fR:
 Warn about unnecessary imports.
+.TP
+\fB--link-args\fR \fIargs\fR:
+Pass arguments to the linker.
 .SH "BUGS"
 See \fBhttps://github.com/graydon/rust/issues\fR for a list of known bugs.
 .SH "AUTHOR"
