Add rustc --drawing to use Unicode line drawing characters for span output
I bet we can find other uses for these sorts of characters in clarifying type
errors, etc.

This is marked as a "stable" flag for consistency with --color. However we
should reconsider both of them as part of #19051. For these features to be
conveniently available with Cargo, we may want to use environment variables or
a config file.

--- a/man/rustc.1
+++ b/man/rustc.1
@@ -100,6 +100,9 @@ Configure coloring of output:
     auto = colorize, if output goes to a tty (default);
     always = always colorize output;
     never = never colorize output
+.TP
+\fB\-\-drawing\fR
+Use drawing characters in diagnostic output
 
 .SH CODEGEN OPTIONS
 
