--- a/debian/install
+++ b/debian/install
@@ -2,5 +2,10 @@
 rustc-1.19.0-dev-x86_64-unknown-linux-gnu/rustc/bin/* usr/bin
 rustc-1.19.0-dev-x86_64-unknown-linux-gnu/rustc/lib/* usr/lib
 
-# rust-std x86_64-unknown-linux-gnu
+# rust-std
 rust-std-1.19.0-dev-x86_64-unknown-linux-gnu/rust-std-x86_64-unknown-linux-gnu/lib/rustlib/* usr/lib/rustlib
+rust-std-1.19.0-dev-x86_64-pc-windows-gnu/rust-std-x86_64-pc-windows-gnu/lib/rustlib/* usr/lib/rustlib
+rust-std-1.19.0-dev-x86_64-apple-darwin/rust-std-x86_64-apple-darwin/lib/rustlib/* usr/lib/rustlib
+rust-std-1.19.0-dev-i686-unknown-linux-gnu/rust-std-i686-unknown-linux-gnu/lib/rustlib/* usr/lib/rustlib
+rust-std-1.19.0-dev-i686-pc-windows-gnu/rust-std-i686-pc-windows-gnu/lib/rustlib/* usr/lib/rustlib
+rust-std-1.19.0-dev-i686-apple-darwin/rust-std-i686-apple-darwin/lib/rustlib/* usr/lib/rustlib
