Use last commit date as version

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-rustc (1.19.0-dev-git14f30da613-1) unstable; urgency=low
+rustc (1.19.0-dev-2017-05-30-1) UNRELEASED; urgency=low
 
   * Initial Release.
 
- -- Onur Aslan <onur@onur.im>  Mon, 22 May 2017 20:18:15 +0300
+ -- Onur Aslan <onur@onur.im>  Tue, 30 May 2017 18:17:11 +0300
