--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
-rustc (1.19.0-dev-20170531-2) UNRELEASED; urgency=medium
+rustc (1.20.0-dev-20170706-1) UNRELEASED; urgency=low
 
   * Rename dh_override_auto_test rule to test.
+  * Add MSVC target platforms for Windows builds.
 
  -- Onur Aslan <onur@onur.im>  Thu, 01 Jun 2017 11:12:20 +0300
 
