--- a/julia/code/Untitled1.ipynb
+++ b/julia/code/Untitled1.ipynb
@@ -45,6 +45,12 @@
    "display_name": "Julia 1.3.0-DEV",
    "language": "julia",
    "name": "julia-1.3"
+  },
+  "language_info": {
+   "file_extension": ".jl",
+   "mimetype": "application/julia",
+   "name": "julia",
+   "version": "1.3.0"
   }
  },
  "nbformat": 4,
