const generic parameter -> const parameter

--- a/compiler/rustc_error_codes/src/error_codes/E0741.md
+++ b/compiler/rustc_error_codes/src/error_codes/E0741.md
@@ -1,4 +1,4 @@
-A non-structural-match type was used as the type of a const generic parameter.
+A non-structural-match type was used as the type of a const parameter.
 
 Erroneous code example:
 
@@ -11,7 +11,7 @@ struct B<const X: A>; // error!
 ```
 
 Only structural-match types (that is, types that derive `PartialEq` and `Eq`)
-may be used as the types of const generic parameters.
+may be used as the types of const parameters.
 
 To fix the previous code example, we derive `PartialEq` and `Eq`:
 
