further const generics wording changes

--- a/compiler/rustc_error_codes/src/error_codes/E0771.md
+++ b/compiler/rustc_error_codes/src/error_codes/E0771.md
@@ -1,5 +1,5 @@
-A non-`'static` lifetime was used in a const generic. This is currently not
-allowed.
+A non-`'static` lifetime was used in a const parameter type. This is
+currently not allowed.
 
 Erroneous code example:
 
@@ -9,8 +9,7 @@ Erroneous code example:
 fn function_with_str<'a, const STRING: &'a str>() {} // error!
 ```
 
-To fix this issue, the lifetime in the const generic need to be changed to
-`'static`:
+To fix this issue, considering changing the lifetime to `'static`:
 
 ```
 #![feature(const_generics)]
