--- a/docs/user/manual.adoc
+++ b/docs/user/manual.adoc
@@ -139,10 +139,10 @@ $ cargo xtask install --server
 === rust-analyzer Language Server Binary
 
 Other editors generally require the `rust-analyzer` binary to be in `$PATH`.
-You can download the pre-built binary from the https://github.com/rust-analyzer/rust-analyzer/releases[releases] page.
-Typically, you then need to rename the binary for your platform, e.g. `rust-analyzer-mac` if you're on Mac OS, to `rust-analyzer` and make it executable in addition to moving it into a directory in your `$PATH`.
+You can download pre-built binaries from the https://github.com/rust-analyzer/rust-analyzer/releases[releases] page.
+You will need to uncompress and rename the binary for your platform, e.g. from `rust-analyzer-aarch64-apple-darwin.gz` on Mac OS to `rust-analyzer`, make it executable, then move it into a directory in your `$PATH`.
 
-On Linux to install the `rust-analyzer` binary into `~/.local/bin`, this commands could be used
+On Linux to install the `rust-analyzer` binary into `~/.local/bin`, these commands should work:
 
 [source,bash]
 ----
@@ -150,7 +150,7 @@ $ curl -L https://github.com/rust-analyzer/rust-analyzer/releases/latest/downloa
 $ chmod +x ~/.local/bin/rust-analyzer
 ----
 
-Ensure `~/.local/bin` is listed in the `$PATH` variable.
+Make sure that `~/.local/bin` is listed in the `$PATH` variable and use the appropriate URL if you're not on a `x86-64` system.
 
 Alternatively, you can install it from source using the command below.
 You'll need the latest stable version of the Rust toolchain.
